--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 pelican = {extras = ["markdown"], version = "^4.7.2"}
+ghp-import = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 
