--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.10
-      
+          python-version: "3.10"
+
       - name: Install dependencies
         run: pip install poetry --user && python -m poetry install
-      
+
       - name: Build gh-page branch
         run: make github
-
