--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build gh-page branch
         run: |
           git config --global user.name 'Github Deploy Page Action'
-          git config --global user.email 'vinzBad@users.noreply.github.com
+          git config --global user.email 'vinzBad@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git checkout "${GITHUB_REF:11}"
+
           poetry run make github
